    * fixed error check in dc1394_set_roi (Mikael Olenfalk)
    * removed extra error string definition for raw1394 failure (SVN 332)

2006-12-06 Damien Douxchamps<ddouxchamps@users.sf.net>
    * SVN 333: fixed a bug in absolute settings. The caching of offsets has
      been removed (Don Murray)
	
2006-12-07 Damien Douxchamps<ddouxchamps@users.sf.net>
    * SVN 334: Fixed memory leak in Linux capture code (Fabien Spindler)
	
2006-12-08 Damien Douxchamps<ddouxchamps@users.sf.net>
    * SVN 335: Fix the badly fixed memory leak. Thanks to Daniel Drake.

2006-12-12 Damien Douxchamps<ddouxchamps@users.sf.net>
    * SVN 336: Try to fix a pointer problem in the topology acquisition
    * SVN 337: New AHD Bayer interpolation (imported from DCRAW by Samuel
      Audet). There may be issues with mulitiple processor systems.

2006-12-12 Damien Douxchamps<ddouxchamps@users.sf.net>
    * SVN 338: added instructions on how to build the package (especially from
      SVN) in the README file.
	
2006-12-14 Damien Douxchamps<ddouxchamps@users.sf.net>
    * SVN 339: fixed a function prototype (another mismatch between .h and .h
      files!)
	
2006-12-20 Damien Douxchamps<ddouxchamps@users.sf.net>
    * SVN 340: fixed missing update of allocated_image_bytes in the frame
      conversion functions.
    * SVN 341: remove debug statements
    * SVN 342: correct changelog date (as you can see I need some sleep...)

2006-12-20 Damien Douxchamps<ddouxchamps@users.sf.net>
    * SVN 343: "channel adjust" functions for AVT Pike cameras (patch from
      Mark Munte)

2006-12-24 David Moore <dcm@acm.org>
    * SVN 344: Updated Mac OS X support to allow the select() call by using
      dc1394_capture_get_fileno ().  It does this by using a separate thread
      for capture.
    * SVN 345: Added support for 800 Mb speeds to Mac OS X (Thanks Mark Munte)
    * SVN 346: Added new function dc1394_reset_bus() and a command-line
      utility called dc1394_reset_bus that will..... reset the bus.